--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ DATABASE_URL = ""
 AUTHORIZED_CHATS = "1298711294"
 SUDO_USERS = "1298711294"
 IGNORE_PENDING_REQUESTS = "False"
-IS_TEAM_DRIVE = "False"
+IS_TEAM_DRIVE = ""
 USE_SERVICE_ACCOUNTS = ""
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
 INDEX_URL = "https://redlion1.flixmovies505.workers.dev/0:""                                        # Not end with /
