--- a/config.env
+++ b/config.env
@@ -14,7 +14,7 @@ AUTHORIZED_CHATS = "1298711294"
 SUDO_USERS = "1298711294"
 IGNORE_PENDING_REQUESTS = "False"
 IS_TEAM_DRIVE = ""
-USE_SERVICE_ACCOUNTS = ""
+USE_SERVICE_ACCOUNTS = "TRUE"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
 INDEX_URL = "https://redlion1.flixmovies505.workers.dev/0:""                                        # Not end with /
 STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
