--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ TELEGRAM_API = "3743823"
 TELEGRAM_HASH = "dea4f0dfb8fc86ceea94cff7bc3645b8"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "0AB6tjgOJt26bUk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
@@ -13,7 +13,7 @@ DATABASE_URL = ""
 AUTHORIZED_CHATS = "1298711294"
 SUDO_USERS = "1298711294"
 IGNORE_PENDING_REQUESTS = "False"
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "TRUE"
 USE_SERVICE_ACCOUNTS = "TRUE"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
 INDEX_URL = "https://redlion1.flixmovies505.workers.dev/0:""                                        # Not end with /
