--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ TELEGRAM_API = "3743823"
 TELEGRAM_HASH = "dea4f0dfb8fc86ceea94cff7bc3645b8"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "0AB6tjgOJt26bUk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
